src/include/pocketlang.h


typedef struct PKVM PKVM;
typedef struct PkHandle PkHandle;
typedef enum PkVarType PkVarType;
typedef enum PkResult PkResult;
typedef struct PkConfiguration PkConfiguration;
typedef void (*pkNativeFn)(PKVM* vm);
typedef void* (*pkReallocFn)(void* memory, size_t new_size, void* user_data);
typedef void (*pkWriteFn) (PKVM* vm, const char* text);
typedef char* (*pkReadFn) (PKVM* vm);
typedef char* (*pkLoadScriptFn) (PKVM* vm, const char* path);
typedef void* (*pkLoadDL) (PKVM* vm, const char* path);
typedef PkHandle* (*pkImportDL) (PKVM* vm, void* handle);
typedef void (*pkUnloadDL) (PKVM* vm, void* handle);
typedef char* (*pkResolvePathFn) (PKVM* vm, const char* from,
                                  const char* path);
typedef void* (*pkNewInstanceFn) (PKVM* vm);
typedef void (*pkDeleteInstanceFn) (PKVM* vm, void*);
enum PkVarType {
  PK_OBJECT = 0,
  PK_NULL,
  PK_BOOL,
  PK_NUMBER,
  PK_STRING,
  PK_LIST,
  PK_MAP,
  PK_RANGE,
  PK_MODULE,
  PK_CLOSURE,
  PK_METHOD_BIND,
  PK_FIBER,
  PK_CLASS,
  PK_INSTANCE,
};
enum PkResult {
  PK_RESULT_SUCCESS = 0,    
  PK_RESULT_UNEXPECTED_EOF,
  PK_RESULT_COMPILE_ERROR,  
  PK_RESULT_RUNTIME_ERROR,  
};
struct PkConfiguration {
  pkReallocFn realloc_fn;
  pkWriteFn stderr_write;
  pkWriteFn stdout_write;
  pkReadFn stdin_read;
  pkResolvePathFn resolve_path_fn;
  pkLoadScriptFn load_script_fn;
  #ifndef PK_NO_DL
  pkLoadDL load_dl_fn;
  pkImportDL import_dl_fn;
  pkUnloadDL unload_dl_fn;
  #endif
  bool use_ansi_escape;
  void* user_data;
};
PK_PUBLIC PkConfiguration pkNewConfiguration();
PK_PUBLIC PKVM* pkNewVM(PkConfiguration* config);
PK_PUBLIC void pkFreeVM(PKVM* vm);
PK_PUBLIC void pkSetUserData(PKVM* vm, void* user_data);
PK_PUBLIC void* pkGetUserData(const PKVM* vm);
PK_PUBLIC void pkRegisterBuiltinFn(PKVM* vm, const char* name, pkNativeFn fn,
                                   int arity, const char* docstring);
PK_PUBLIC void pkAddSearchPath(PKVM* vm, const char* path);
PK_PUBLIC void* pkRealloc(PKVM* vm, void* ptr, size_t size);
PK_PUBLIC void pkReleaseHandle(PKVM* vm, PkHandle* handle);
PK_PUBLIC PkHandle* pkNewModule(PKVM* vm, const char* name);
PK_PUBLIC void pkRegisterModule(PKVM* vm, PkHandle* module);
PK_PUBLIC void pkModuleAddFunction(PKVM* vm, PkHandle* module,
                                   const char* name,
                                   pkNativeFn fptr, int arity,
                                   const char* docstring);
PK_PUBLIC PkHandle* pkNewClass(PKVM* vm, const char* name,
                               PkHandle* base_class, PkHandle* module,
                               pkNewInstanceFn new_fn,
                               pkDeleteInstanceFn delete_fn,
                               const char* docstring);
PK_PUBLIC void pkClassAddMethod(PKVM* vm, PkHandle* cls,
                                const char* name,
                                pkNativeFn fptr, int arity,
                                const char* docstring);
PK_PUBLIC void pkModuleAddSource(PKVM* vm, PkHandle* module,
                                 const char* source);
PK_PUBLIC PkResult pkRunString(PKVM* vm, const char* source);
PK_PUBLIC PkResult pkRunFile(PKVM* vm, const char* path);
PK_PUBLIC PkResult pkRunREPL(PKVM* vm);
PK_PUBLIC void pkSetRuntimeError(PKVM* vm, const char* message);
PK_PUBLIC void pkSetRuntimeErrorFmt(PKVM* vm, const char* fmt, ...);
PK_PUBLIC void* pkGetSelf(const PKVM* vm);
PK_PUBLIC int pkGetArgc(const PKVM* vm);
PK_PUBLIC bool pkCheckArgcRange(PKVM* vm, int argc, int min, int max);
PK_PUBLIC bool pkValidateSlotBool(PKVM* vm, int slot, bool* value);
PK_PUBLIC bool pkValidateSlotNumber(PKVM* vm, int slot, double* value);
PK_PUBLIC bool pkValidateSlotInteger(PKVM* vm, int slot, int32_t* value);
PK_PUBLIC bool pkValidateSlotString(PKVM* vm, int slot,
                                    const char** value, uint32_t* length);
PK_PUBLIC bool pkValidateSlotType(PKVM* vm, int slot, PkVarType type);
PK_PUBLIC bool pkValidateSlotInstanceOf(PKVM* vm, int slot, int cls);
PK_PUBLIC bool pkIsSlotInstanceOf(PKVM* vm, int inst, int cls, bool* val);
PK_PUBLIC void pkReserveSlots(PKVM* vm, int count);
PK_PUBLIC int pkGetSlotsCount(PKVM* vm);
PK_PUBLIC PkVarType pkGetSlotType(PKVM* vm, int index);
PK_PUBLIC bool pkGetSlotBool(PKVM* vm, int index);
PK_PUBLIC double pkGetSlotNumber(PKVM* vm, int index);
PK_PUBLIC const char* pkGetSlotString(PKVM* vm, int index, uint32_t* length);
PK_PUBLIC PkHandle* pkGetSlotHandle(PKVM* vm, int index);
PK_PUBLIC void* pkGetSlotNativeInstance(PKVM* vm, int index);
PK_PUBLIC void pkSetSlotNull(PKVM* vm, int index);
PK_PUBLIC void pkSetSlotBool(PKVM* vm, int index, bool value);
PK_PUBLIC void pkSetSlotNumber(PKVM* vm, int index, double value);
PK_PUBLIC void pkSetSlotString(PKVM* vm, int index, const char* value);
PK_PUBLIC void pkSetSlotStringLength(PKVM* vm, int index,
                                     const char* value, uint32_t length);
PK_PUBLIC void pkSetSlotStringFmt(PKVM* vm, int index, const char* fmt, ...);
PK_PUBLIC void pkSetSlotHandle(PKVM* vm, int index, PkHandle* handle);
PK_PUBLIC uint32_t pkGetSlotHash(PKVM* vm, int index);
PK_PUBLIC void pkPlaceSelf(PKVM* vm, int index);
PK_PUBLIC void pkGetClass(PKVM* vm, int instance, int index);
PK_PUBLIC bool pkNewInstance(PKVM* vm, int cls, int index, int argc, int argv);
PK_PUBLIC void pkNewRange(PKVM* vm, int index, double first, double last);
PK_PUBLIC void pkNewList(PKVM* vm, int index);
PK_PUBLIC void pkNewMap(PKVM* vm, int index);
PK_PUBLIC bool pkListInsert(PKVM* vm, int list, int32_t index, int value);
PK_PUBLIC bool pkListPop(PKVM* vm, int list, int32_t index, int popped);
PK_PUBLIC uint32_t pkListLength(PKVM* vm, int list);
PK_PUBLIC bool pkCallFunction(PKVM* vm, int fn, int argc, int argv, int ret);
PK_PUBLIC bool pkCallMethod(PKVM* vm, int instance, const char* method,
                            int argc, int argv, int ret);
PK_PUBLIC bool pkGetAttribute(PKVM* vm, int instance, const char* name,
                              int index);
PK_PUBLIC bool pkSetAttribute(PKVM* vm, int instance,
                              const char* name, int value);
PK_PUBLIC bool pkImportModule(PKVM* vm, const char* path, int index);